# fastAPI-bolierplate

./: .env.example  .gitignore  AI_INTEGRATION_GUIDE.md  LICENSE  Makefile  PROJECT_RULES.md  README.md  env.example  install-packages.sh  pyproject.toml  requirements-minimal.txt  requirements.txt
ai/: __init__.py
ai/chains/: __init__.py  chat_chain.py
ai/prompts/: __init__.py  manager.py  templates.py
ai/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py
alembic/: env.py
alembic/versions/: eee625cb53b9_.py
app/: __init__.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  ai.py  auth.py  health.py  users.py
config/: mcp_servers.json
core/: __init__.py  database.py  logging.py  security.py  settings.py  storage.py
data/: .gitkeep
logs/: .gitkeep
models/: __init__.py  user.py
schemas/: __init__.py  ai.py
scripts/: create_db.py  create_model.py
services/: __init__.py
static/: .gitkeep
tests/: .gitkeep
uploads/: .gitkeep
utils/: __init__.py
