[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning", 
    "ignore::pytest.PytestDeprecationWarning",
    "ignore:Support for class-based.*:DeprecationWarning",
    "ignore:.*type_params.*:DeprecationWarning"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lg-ai-agent"
version = "0.1.0"
description = "LG AI Agent with multiple LLM providers"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-community", 
    "langchain-ollama",
    "pytest",
    "pytest-asyncio"
] 